fix slider text UI bug on mobile view Imported from Changeset 2911

--- a/WarehouseEcommerce/Content/Theme/University/app/css/App.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/App.css
@@ -1492,7 +1492,7 @@ input[type="number"]::-webkit-outer-spin-button {
         }
             .nb_footer .nb_footersec_inner .nb_footnav_wrap ul li a {
                 display: block;
-                font-size: 14px;
+                font-size: 16px;
                 color: #ffffff;
                 font-family: "primaryfont_SemiBold";
                 padding: 0px 15px;
